[fix](multicatalog) fix error reading data on tencent ofs after jdk17